# INDIJoypad

./: CMakeLists.txt  action.h  focuser.cpp  focuser.h  indiclient.cpp  indiclient.h  indidevice.cpp  indidevice.h  main-cli.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapping.cpp  mapping.h  mappings-hw.json  mappings-hw.yaml  mappings.cpp  mappings.h  mappings.json  mappings.yaml  settings.cpp  settings.h  telescope.cpp  telescope.h
